Fixed style inconsistancies on IE

--- a/web_static/styles.less
+++ b/web_static/styles.less
@@ -155,12 +155,21 @@ font-family:'OSP_helvetica_serif';
     border: 1px solid @red;
     } 
     
-.overlays {
+.base_map_pos {
     position:absolute;
-    height: -calc(@Hproject); 
-    height: -webkit-calc(@Hproject); 
-    height: -moz-calc(@Hproject); 
-    height: -o-calc(@Hproject); 
+    top:@topH ;
+    bottom:(@topH / 2 + @bordermap);
+    right:@marginEXT;
+    left:@marginEXT;
+    
+    background-color: white;
+}
+.overlays{
+    position:absolute;
+    top:0 ;
+    bottom:0;
+    right:0;
+    left:0;
     overflow-y: auto;
     background-color: white;
 }
@@ -169,32 +178,27 @@ font-family:'OSP_helvetica_serif';
      padding:6px 6px 3px 6px;
      font-family: 'FjallaOne-Regular', 'URWGothicL', Arial, Helvetica;  
      text-transform:uppercase;
-     letter-spacing:1px;
-     color: white;     
-}
-
-.bluetitle {
-     background-color: @blue;
      font-size:16pt;    
-     display:inline-block;      
-     .Title;
+     letter-spacing:1px;
+     display:inline-block;   
 }
 
-.featured-bluetitle {
-     background-color: @blue;
-     font-size:12pt;    
-     display:inline-block;      
+.bluetitle {      
      .Title;
+     background-color: @blue;
+     color: white;
+}
+
+.featured-bluetitle {   
+     .Title;
+     background-color: @blue;
+     color: white;     
+     font-size:12pt;    
 }
 
 .whitetitle {
+     .Title;
      background-color: white;
-     font-size:16pt;    
-     display:inline-block;      
-     padding:2px 6px 0px 6px;
-     font-family: 'URWGothicL', Arial, Helvetica;  
-     text-transform:uppercase;
-     letter-spacing:2px;
      color: #000;
  }
  
@@ -247,7 +251,9 @@ a, .link{cursor:pointer;}
 
 #bma-overlay-1 {
     .overlays;
-    left: (@marginEXT + @marginINT + @bordermap);
+    
+/*     left: (@marginEXT + @marginINT + @bordermap); */
+    padding:(@marginEXT + @marginINT + @bordermap);
     width: 400px;    
     
     #legend-box{
@@ -438,17 +444,10 @@ body{height: 100%; }
 
 #index_popup_box {
   width: @Wpopup;
-    height: -calc(@Hpopup); 
-    height: -webkit-calc(@Hpopup); 
-    height: -moz-calc(@Hpopup); 
-    height: -o-calc(@Hpopup);  
     background-color: transparent;
     position: absolute;
     top: 25%;
-    left: -calc(@Lpopup); 
-    left: -webkit-calc(@Lpopup); 
-    left: -moz-calc(@Lpopup); 
-    left: -o-calc(@Lpopup);
+    left:25%;
       
    #index_popup_left {
       float: left;
@@ -523,42 +522,23 @@ body{height: 100%; }
 }
 
 #map-wrapper {
-    width: -calc(@Wmap-wrapper); 
-    width: -webkit-calc(@Wmap-wrapper); 
-    width: -moz-calc(@Wmap-wrapper); 
-    width: -o-calc(@Wmap-wrapper); 
-    height: -calc(@Hmap-wrapper); 
-    height: -webkit-calc(@Hmap-wrapper); 
-    height: -moz-calc(@Hmap-wrapper); 
-    height: -o-calc(@Hmap-wrapper);     
-    padding: @topH @marginEXT @marginEXT @marginEXT;
+    .base_map_pos;
+    padding: @marginINT @marginINT @topH @marginINT;
+    border: @border;
     
-    #map-wrapper-2 {
-        width: -calc(@Wmap-wrapper-2); 
-        width: -webkit-calc(@Wmap-wrapper-2); 
-        width: -moz-calc(@Wmap-wrapper-2); 
-        width: -o-calc(@Wmap-wrapper-2); 
-        height: -calc(@Hmap-wrapper-2); 
-        height: -webkit-calc(@Hmap-wrapper-2); 
-        height: -moz-calc(@Hmap-wrapper-2); 
-        height: -o-calc(@Hmap-wrapper-2); 
-        padding: @marginINT @marginINT @topH @marginINT;
-        border: @border;
-        
-        #map{
-          width:100%; 
-          min-height:100%; 
-          height: 100%;
-          left:0;
-        }
-        
-        #projects_table_wrapper{
-            width:100%; 
-            min-height:100%; 
-            height: 100%;
-            left:0;
-            overflow:auto;
-        }
+    #map{
+        width:100%; 
+        min-height:100%; 
+        height: 100%;
+        left:0;
+    }
+    
+    #projects_table_wrapper{
+        width:100%; 
+        min-height:100%; 
+        height: 100%;
+        left:0;
+        overflow:auto;
     }
 }
 
@@ -573,7 +553,7 @@ body{height: 100%; }
     position:absolute;
     width:500px; 
     right: (@marginEXT + @marginINT + @bordermap); 
-    bottom:(@topH / 2 + @bordermap);
+    bottom: (@marginINT / 2);
     
     #zoom-control-box {
         position: absolute;
@@ -726,49 +706,32 @@ body{height: 100%; }
 
 #bma-overlay-2 {
     .overlays;
-    left: (@marginEXT);
-    width: -calc(@Wmap-wrapper-2); 
-    width: -webkit-calc(@Wmap-wrapper-2); 
-    width: -moz-calc(@Wmap-wrapper-2); 
-    width: -o-calc(@Wmap-wrapper-2); 
-    padding:0px;
-    overflow-x: hidden;
+    left: -1px;
+    padding:0;
+    overflow: visible;
+    border-left: @border; 
 
 
         #page-box {
             height: auto;
-            min-height: 100%;
-            border-left: @border; 
-          
             
-            .catname-box {
-              margin-left: (@Wmenu + 30px); 
-              width: (@Warticle); 
-              height: (@Hcatname);
-           
-                .menu-title {
-                   font-family: 'FjallaOne-Regular', arial;
-                   font-size:20pt;
-                   display:inline-block;
-                   text-transform: uppercase;
-                }            
-            }
+            padding:(@marginINT + @marginEXT);
+            padding-left:0;
             
             .menu-box {
             position: absolute;
             display: block;
             width: @Wmenu;
-            float: left;
             font-size: 11px;
-            margin-top: -6px;
             text-align: center;
+            left:-1px;
+            top:@marginINT;
                 
                 .menu_item {                
-                margin-top: 5px;
+                margin-bottom: 5px;
                 text-align: left;
                 padding-bottom: 2px;
                 line-height: 16px;
-                margin-left: -1px;
                 border-top: 1px solid #000;
                 border-bottom: 1px solid #000;
                 border-left: 1px solid white;
@@ -820,17 +783,9 @@ body{height: 100%; }
             .article-box{
                position: absolute;
                display: block;
-               left: (@Wmenu + 30px); 
-               height: 80%;
+               left: (@Wmenu + @marginINT + @marginEXT); 
+               top:@marginINT;right:@marginINT;bottom:@marginINT;
                overflow: auto;
-               width: -calc(@Warticle-box); 
-               width: -webkit-calc(@Warticle-box); 
-               width: -moz-calc(@Warticle-box); 
-               width: -o-calc(@Warticle-box);
-               height: -calc(@Harticle-box); 
-               height: -webkit-calc(@Harticle-box); 
-               height: -moz-calc(@Harticle-box); 
-               height: -o-calc(@Harticle-box); 
              
                  .article-title{
                      width: (@Warticle);                     
@@ -903,6 +858,7 @@ body{height: 100%; }
 
 
 table#projects_table {
+    width:100%;
 	border-width: 1px;
 	border-color: #666666;
 	border-collapse: collapse;
